Fixed scroll - jumping issue on mobile browsers

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -67,13 +67,13 @@ blockquote {
 @tailwind utilities;
 
 .max-h-homehero {
-    max-height: calc(var(--vh) * 100);
+    max-height: 100vh;
 }
 
 @screen lg {
     .max-h-homehero {
         /* xl:max-h-screen-3/4 xxl:max-h-screen-2/3 */
-        max-height: var(--homeHero, calc(var(--vh) * 75));
+        max-height: var(--homeHero, calc(100vh * 75));
     }
 }
 
@@ -104,12 +104,12 @@ blockquote {
     @apply flex justify-center items-center;
 }
 
-.highlight {
+/* .highlight {
     @apply inline-block bg-highlight font-bold text-black whitespace-no-wrap rounded-md;
     padding-right: 0.3em;
     padding-left: 0.3em;
     margin-left: 0.2em;
-}
+} */
 
 .flipped {
     transform: scale(-1, 1);
